--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,29 +1,30 @@
+/* Universal Selector */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
+/* Background of Whole Page */
 body {
     background-color: #d9dcd6;
 }
-
+/* Header class styling */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-
+/* Part 1 "Hori" of comp title */
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
-
+/* Part 2 "seo" of comp title */
 .header h1 .seo {
     color: #d9dcd6;
 }
-
+/* Styling of nav portion of header */
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -40,16 +41,16 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
-
+/* Anchor Styling */
 a {
     color: #ffffff;
     text-decoration: none;
 }
-
+/* Paragraph Styling */
 p {
     font-size: 16px;
 }
-
+/* Cover image styling */
 .cover-image {
     height: 800px;
     width: 100%;
@@ -68,13 +69,13 @@ p {
     float: right;
     margin-left: 25px;
 }
-
+/* Styling for the Main with content class */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-
+/* Styling for main with benefits class */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -133,7 +134,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* section styling within the main */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -187,7 +188,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* Footer styling */
 .footer {
     padding: 30px;
     clear: both;
